--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 /* This is a comment */
@@ -38,7 +39,7 @@ figcaption {
 
 /* ID selector (applied to one unique element per page) */
 #logo {
-  background: aqua;
+
 }
 
 /* Descendent selector */
@@ -65,4 +66,88 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+/* Layout */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+  background: #eee;
+}
+
+.col-1 {
+  float: left;
+  width: 32%;
+  margin:;
+  background: #ccc;
+}
+.col-2 {
+  float:left;
+  width: 66%;
+  background: #ccc;
+}
+.col-3 {
+  background: #ccc;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+.first {
+  margin-left: 0%;
+}
+
+/* style media */
+
+img, video, audio {
+  max-width: 100%;
+}
+
+/* sections */
+
+header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  background: white;
+  z-index: 1;
+}
+
+section {
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+/* social */
+
+#social {
+  position: fixed;
+  top: 200px;
+  right: 20px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display:block;
+  width: 40px;
+  height: 40px;
+  background: yellow;
 }
